# multi-agent-orchestrator

./: .gitignore  README.md  main.py  output_patch.txt  output_tests.txt  pyproject.toml  temp.patch
app/: main.py
app/agents/: code_reader.py  code_writer.py  planner.py  pr_agent.py  test_writer.py
app/graph/: workflow.py
app/state/: agent_state.py
app/tools/: github_tool.py  llm.py  patch_tool.py  repo_tool.py
backend/: .env.example  requirements.txt  test_queue.py
backend/app/: main.py
backend/app/api/: auth.py  billing.py  deps.py  fix.py  issues.py  jobs.py  main.py  repos.py  review.py  routes.py  status.py  webhooks.py  webhooks_dodo.py
backend/app/core/: auth.py  config.py
backend/app/db/: database.py  init_db.py  models.py  seed.py
backend/app/queue/: redis.py
backend/app/services/: billing_checkout.py  dodo_client.py  fix_job_db.py  job_runner.py  test_job.py  users.py  webhook_dodo.py
backend/app/store/: job_store.py
backend/app/utils/: job_tracker.py
backend/app/workers/: worker.py
client/: middleware.ts  next.config.ts  package.json  pnpm-lock.yaml
client/app/: globals.css  layout.tsx  page.tsx
client/app/analytics/: AnalyticsView.tsx  loading.tsx
client/app/billing/: loading.tsx  page.tsx
client/app/dashboard/: page.tsx
client/app/issues/: loading.tsx  page.tsx
client/components/: AccountMenu.tsx  AppRoot.tsx  AppShell.tsx  LandingClient.tsx  RepoIssuesWorkspace.tsx
client/context/: JobQueueContext.tsx
client/hooks/: useCaptureOAuthToken.ts
client/lib/: authSession.ts  billing.ts  fixMetrics.ts  sessionCookie.ts
(+21 files in other folders)
